--- a/projet/newindex/newindex.html
+++ b/projet/newindex/newindex.html
@@ -11,7 +11,7 @@
         <div class="container">
             <div class="logotop">
                 <a href="#home">
-                    <img src="/img/logo-site.jpeg" alt="Logo do site">
+                    <img src="/projet/img/logo-site.jpeg" alt="Logo do site">
                 </a>
             </div>
             <nav>
@@ -31,24 +31,24 @@
             <div class="hero-content">
                 <h1>Estilo e Cuidado para o Homem Moderno</h1>
                 <p>Barbeiros experientes, produtos premium e um ambiente acolhedor esperam por você.</p>
-                <a href="/login/login.html" class="cta-primary">Agende Seu Horário Online</a>
+                <a href="/projet/login/login.html" class="cta-primary">Agende Seu Horário Online</a>
                 <div class="vantagens">
                     <div class="vantagem">
-                        <img src="/img/icon-barber.jpeg" alt="Barbeiros Experientes">
+                        <img src="/projet/img/icon-barber.jpeg" alt="Barbeiros Experientes">
                         <p>Barbeiros Experientes</p>
                     </div>
                     <div class="vantagem">
-                        <img src="/img/icon-premium.jpeg" alt="Produtos Premium">
+                        <img src="/projet/img/icon-premium.jpeg" alt="Produtos Premium">
                         <p>Produtos Premium</p>
                     </div>
                     <div class="vantagem">
-                        <img src="/img/icon-ambiente.jpeg" alt="Ambiente Aconchegante">
+                        <img src="/projet/img/icon-ambiente.jpeg" alt="Ambiente Aconchegante">
                         <p>Ambiente Aconchegante</p>
                     </div>
                 </div>
             </div>
             <div class="hero-image">
-                <img src="/img/barbearia-hero.jpeg" alt="">
+                <img src="/projet/img/barbearia-hero.jpeg" alt="">
             </div>
         </div>
     </section>
@@ -56,7 +56,7 @@
     <section id="sobre" class="sobre">
         <div class="container">
             <div class="sobre-image">
-                <img src="/img/equipe-barbearia.jpeg" alt="Equipe da Barbearia">
+                <img src="/projet/img/equipe-barbearia.jpeg" alt="Equipe da Barbearia">
             </div>
             <div class="sobre-content">
                 <h2>Sobre Nós</h2>
@@ -72,21 +72,21 @@
             <h2>Nossos Serviços</h2>
             <div class="servicos-lista">
                 <div class="servico">
-                    <img src="/img/servico-corte.jpeg" alt="Corte de Cabelo">
+                    <img src="/projet/img/servico-corte.jpeg" alt="Corte de Cabelo">
                     <h3>Corte de Cabelo</h3>
                     <p>Cortes clássicos, modernos e personalizados para todos os estilos.</p>
                     <span>A partir de R$XX</span>
                     <a href="#agendamento" class="cta-secondary">Agendar Corte</a>
                 </div>
                 <div class="servico">
-                    <img src="/img/servico-barba.jpeg" alt="Barba">
+                    <img src="/projet/img/servico-barba.jpeg" alt="Barba">
                     <h3>Barba</h3>
                     <p>Modelagem, corte, alinhamento e tratamento completo para sua barba.</p>
                     <span>A partir de R$YY</span>
                     <a href="#agendamento" class="cta-secondary">Agendar Barba</a>
                 </div>
                 <div class="servico">
-                    <img src="/img/servico-tratamento.jpeg" alt="Tratamentos Capilares">
+                    <img src="/projet/img/servico-tratamento.jpeg" alt="Tratamentos Capilares">
                     <h3>Tratamentos Capilares</h3>
                     <p>Hidratação, revitalização e outros cuidados para a saúde do seu cabelo.</p>
                     <span>A partir de R$ZZ</span>
@@ -101,12 +101,12 @@
         <div class="container">
             <h2>Galeria</h2>
             <div class="galeria-grid">
-                <img src="/img/corte (1).jpeg" alt="Trabalho 1">
-                <img src="/img/corte (2).jpeg" alt="Trabalho 2">
-                <img src="/img/corte (3).jpeg" alt="Trabalho 3">
-                <img src="/img/midhome1.jpg" alt="Trabalho 4">
-                <img src="/img/midhome2.jpg" alt="Trabalho 5">
-                <img src="/img/midhome3.jpg" alt="Trabalho 6">
+                <img src="/projet/img/corte (1).jpeg" alt="Trabalho 1">
+                <img src="/projet/img/corte (2).jpeg" alt="Trabalho 2">
+                <img src="/projet/img/corte (3).jpeg" alt="Trabalho 3">
+                <img src="/projet/img/midhome1.jpg" alt="Trabalho 4">
+                <img src="/projet/img/midhome2.jpg" alt="Trabalho 5">
+                <img src="/projet/img/midhome3.jpg" alt="Trabalho 6">
                 </div>
         </div>
     </section>
@@ -116,15 +116,15 @@
             <h2>Contato</h2>
             <div class="contato-info">
                 <div class="info-item">
-                    <img src="/img/icon-local.png" alt="Localização">
+                    <img src="/projet/img/icon-local.png" alt="Localização">
                     <p>[Seu Endereço Completo]</p>
                 </div>
                 <div class="info-item">
-                    <img src="/img/icon-phone.png" alt="Telefone">
+                    <img src="/projet/img/icon-phone.png" alt="Telefone">
                     <p>[Seu Telefone]</p>
                 </div>
                 <div class="info-item">
-                    <img src="/img/icon-email.jpeg" alt="Email">
+                    <img src="/projet/img/icon-email.jpeg" alt="Email">
                     <p>[Seu Email]</p>
                 </div>
             </div>
@@ -138,13 +138,13 @@
         <div class="container">
             <p>&copy; [Ano Atual] [Nome da Barbearia]. Todos os direitos reservados.</p>
             <div class="social-links">
-                <a href="#"><img src="/img/logotipo-circular-do-facebook.png" alt="Facebook"></a>
-                <a href="#"><img src="/img/instagram.png" alt="Instagram"></a>
-                <a href="#"><img src="/img/youtube.png" alt="Facebook"></a>
-                <a href="#"><img src="/img/whatsapp.png" alt="Instagram"></a>
+                <a href="#"><img src="/projet/img/logotipo-circular-do-facebook.png" alt="Facebook"></a>
+                <a href="#"><img src="/projet/img/instagram.png" alt="Instagram"></a>
+                <a href="#"><img src="/projet/img/youtube.png" alt="Facebook"></a>
+                <a href="#"><img src="/projet/img/whatsapp.png" alt="Instagram"></a>
             </div>
         </div>
     </footer>
 </body>
-<script src="/js/go.js"></script>
+<script src="/projet/js/go.js"></script>
 </html>
