--- a/projet/register/cadastra.html
+++ b/projet/register/cadastra.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/register/cadastrar.css">
+    <link rel="stylesheet" href="/projet/register/cadastrar.css">
     <title>cadastra</title>
 </head>
 <body>
@@ -11,12 +11,12 @@
         <div class="container">
             <div class="logotop">
                 <a href="#home">
-                    <img src="/img/logo-site.jpeg" alt="Logo do site">
+                    <img src="/projet/img/logo-site.jpeg" alt="Logo do site">
                 </a>
             </div>
             <nav>
                 <ul>
-                    <li><a href="/newindex/newindex.html">Home</a></li>
+                    <li><a href="/projet/newindex/newindex.html">Home</a></li>
                     <li><a href="#contato">Contato</a></li>
                     <li><button type="button" onclick="gologin()">Loguin</button></li>
                 </ul>
@@ -50,7 +50,7 @@
                         </p>
                     </div>
                     <div class="imgdapagina">
-                        <img src="/img/corte (1).jpeg" alt="imagem referencia">
+                        <img src="/projet/img/corte (1).jpeg" alt="imagem referencia">
                     </div>
                 </div>
             </nav>
@@ -124,10 +124,10 @@
             <div class="container">
                 <p>&copy; [Ano Atual] [Nome da Barbearia]. Todos os direitos reservados.</p>
                 <div class="social-links">
-                    <a href="#"><img src="/img/logotipo-circular-do-facebook.png" alt="Facebook"></a>
-                    <a href="#"><img src="/img/instagram.png" alt="Instagram"></a>
-                    <a href="#"><img src="/img/youtube.png" alt="Facebook"></a>
-                    <a href="#"><img src="/img/whatsapp.png" alt="Instagram"></a>
+                    <a href="#"><img src="/projet/img/logotipo-circular-do-facebook.png" alt="Facebook"></a>
+                    <a href="#"><img src="/projet/img/instagram.png" alt="Instagram"></a>
+                    <a href="#"><img src="/projet/img/youtube.png" alt="Facebook"></a>
+                    <a href="#"><img src="/projet/img/whatsapp.png" alt="Instagram"></a>
                 </div>
             </div>
         </footer>
@@ -136,8 +136,8 @@
 <script src="https://www.gstatic.com/firebasejs/11.5.0/firebase-app-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/11.5.0/firebase-auth-compat.js"></script>
 
-<script src="../js/firebase-init.js"></script>
-<script src="../js/go.js"></script>
-<script src="../register/registro.js"></script>
+<script src="/projet/js/firebase-init.js"></script>
+<script src="/projet/js/go.js"></script>
+<script src="/projet/register/registro.js"></script>
  
 </html>
