--- a/projet/global/global.html
+++ b/projet/global/global.html
@@ -3,15 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/glob.css">
+    <link rel="stylesheet" href="/projet/global/glob.css">
     <title>Document</title>
 </head>
 <body>
     <header >
         <div class="topo">
             <div id="imglogo" >
-                <a href="/html/index.html">
-                    <img class="ing" src="/img/logo-site.jpeg" alt="logo"></a>
+                <a href="/projet/html/index.html">
+                    <img class="ing" src="/projet/img/logo-site.jpeg" alt="logo"></a>
             </div>
             <div class="infor">
                 <div class="semback">
@@ -36,10 +36,10 @@
         <div class="container">
             <p>&copy; [Ano Atual] [Nome da Barbearia]. Todos os direitos reservados.</p>
             <div class="social-links">
-                <a href="#"><img src="/img/logotipo-circular-do-facebook.png" alt="Facebook"></a>
-                <a href="#"><img src="/img/instagram.png" alt="Instagram"></a>
-                <a href="#"><img src="/img/youtube.png" alt="Facebook"></a>
-                <a href="#"><img src="/img/whatsapp.png" alt="Instagram"></a>
+                <a href="#"><img src="/projet/img/logotipo-circular-do-facebook.png" alt="Facebook"></a>
+                <a href="#"><img src="/projet/img/instagram.png" alt="Instagram"></a>
+                <a href="#"><img src="/projet/img/youtube.png" alt="Facebook"></a>
+                <a href="#"><img src="/projet/img/whatsapp.png" alt="Instagram"></a>
             </div>
         </div>
     </footer>
@@ -48,11 +48,11 @@
 <script src="https://www.gstatic.com/firebasejs/11.5.0/firebase-app-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/11.5.0/firebase-auth-compat.js"></script>
 
-<script src="../js/firebase-init.js"></script>
+<script src="/projet/js/firebase-init.js"></script>
 
-<script src="../js/auth-guard.js"></script>
-<script src="home.js"></script>
-<script src="../js/validations.js"></script>
-<script src="../js/ go.js"></script>
+<script src="/projet/js/auth-guard.js"></script>
+<script src="/projet/home/home.html"></script>
+<script src="/projet/js/validations.js"></script>
+<script src="/projet/js/ go.js"></script>
 
 </html>
