--- a/projet/login/login.html
+++ b/projet/login/login.html
@@ -72,8 +72,7 @@
             <div class="social-links">
                 <a href="#"><img src="/projet/img/logotipo-circular-do-facebook.png" alt="Facebook"></a>
                 <a href="#"><img src="/projet/img/instagram.png" alt="Instagram"></a>
-                <a href="#"><img src="/projet/img/youtube.png" alt="Instagram"></a>
-                <a href="#"><img src="/projet/img/whatsapp.png" alt="Instagram"></a>
+                <a href="#"><img src="/projet/img/youtube.png" alt="Facebook"></a>
                 <a href="#"><img src="/projet/img/whatsapp.png" alt="Instagram"></a>
             </div>
         </div>
@@ -87,5 +86,6 @@
 <script src="/projet/login/login.js"></script>
 <script src="/projet/js/validations.js" ></script>
 <script src="/projet/js/go.js"></script>
+
 
 </html>
