--- a/projet/global/global.html
+++ b/projet/global/global.html
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/glob.css">
+    <link rel="stylesheet" href="/projet/global/glob.css">
     <title>Document</title>
 </head>
+
 <body>
-    <header >
+    <header>
         <div class="topo">
-            <div id="imglogo" >
-                <a href="/html/index.html">
-                    <img class="ing" src="/img/logo-site.jpeg" alt="logo"></a>
+            <div id="imglogo">
+                <a href="/projet/newindex/newindex.html">
+                    <img class="ing" src="/projet/img/logo-site.jpeg" alt="logo"></a>
             </div>
             <div class="infor">
                 <div class="semback">
@@ -28,7 +30,7 @@
     </header>
 
     <main>
-            
+
     </main>
 
 
