--- a/projet/login/login.html
+++ b/projet/login/login.html
@@ -1,18 +1,20 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/login/login.css">
-    <link rel="stylesheet" href="/global/glob.css">
+    <link rel="stylesheet" href="/projet/login/login.css">
+    <link rel="stylesheet" href="/projet/global/glob.css">
     <title>Document</title>
 </head>
+
 <body>
     <header>
         <div class="topo">
-            <div id="imglogo" >
-                <a href="/index/index.html">
-                    <img class="ing" src="/img/logo-site.jpeg" alt="logo"></a>
+            <div id="imglogo">
+                <a href="/projet/index/index.html">
+                    <img class="ing" src="/projet/img/logo-site.jpeg" alt="logo"></a>
             </div>
             <div class="infor">
                 <div class="semback">
@@ -34,58 +36,58 @@
                     <div class="tituloimp">
                         <h1>Login</h1>
                     </div>
-                        <div class="imputes">
-                            <h4>Email</h4>
-                            <input id="email" name="email" type="email" onchange="onChangeEmail()" placeholder="seu@email.com" >
-                            <div class="erro" id="email-required-error">Email obrigatorio!</div>
-                            <div class="erro" id="email-invalid-error">Email invalido!</div>
-                        </div>
+                    <div class="imputes">
+                        <h4>Email</h4>
+                        <input id="email" name="email" type="email" onchange="onChangeEmail()" placeholder="seu@email.com">
+                        <div class="erro" id="email-required-error">Email obrigatorio!</div>
+                        <div class="erro" id="email-invalid-error">Email invalido!</div>
+                    </div>
                     <div class="imputes">
                         <h4>Senha</h4>
-                        <input id="password" name="senha" class="imppw" type="password" placeholder="Senha" onchange="onChangePassword()" >
+                        <input id="password" name="senha" class="imppw" type="password" placeholder="Senha" onchange="onChangePassword()">
                         <div class="erro" id="password-required-error">Senha obrigatoria</div>
                     </div>
                     <div>
                         <div class="buttonlogin">
-                            <button id="login-button" type="button"  disabled="true" onclick="login()">
+                            <button id="login-button" type="button" disabled="true" onclick="login()">
                                 Entrar
                             </button>
                         </div>
-                        <div class="buttonesqueci" >
-                            <button type="button" id="recover-password-button" disabled="true"  onclick="recoverPassword()">
+                        <div class="buttonesqueci">
+                            <button type="button" id="recover-password-button" disabled="true" onclick="recoverPassword()">
                                 Esqueci minha cenha
                             </button>
                         </div>
                         <div class="buttoncadastrar">
-                            <button type="button"class="outline" onclick="registergo()">
+                            <button type="button" class="outline" onclick="registergo()">
                                 cadastrar
                             </button>
                         </div>
                     </div>
                 </form>
-         </div>
+            </div>
         </nav>
     </div>
     <footer>
         <div class="container">
             <p>&copy; [Ano Atual] [Nome da Barbearia]. Todos os direitos reservados.</p>
             <div class="social-links">
-                <a href="#"><img src="/img/logotipo-circular-do-facebook.png" alt="Facebook"></a>
-                <a href="#"><img src="/img/instagram.png" alt="Instagram"></a>
-                <a href="#"><img src="/img/youtube.png" alt="Instagram"></a>
-                <a href="#"><img src="/img/whatsapp.png" alt="Instagram"></a>
-                <a href="#"><img src="/img/whatsapp.png" alt="Instagram"></a>
+                <a href="#"><img src="/projet/img/logotipo-circular-do-facebook.png" alt="Facebook"></a>
+                <a href="#"><img src="/projet/img/instagram.png" alt="Instagram"></a>
+                <a href="#"><img src="/projet/img/youtube.png" alt="Instagram"></a>
+                <a href="#"><img src="/projet/img/whatsapp.png" alt="Instagram"></a>
+                <a href="#"><img src="/projet/img/whatsapp.png" alt="Instagram"></a>
             </div>
         </div>
     </footer>
 </body>
-  <script src="https://www.gstatic.com/firebasejs/11.5.0/firebase-app-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/11.5.0/firebase-auth-compat.js"></script>
-  <script src="../js/firebase-init.js"></script>
-  
-<script src="/js/loading.js" ></script>
-<script src="/login/login.js"></script>
-<script src="../js/validations.js" ></script>
-<script src="../js/go.js"></script>
+<script src="https://www.gstatic.com/firebasejs/11.5.0/firebase-app-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/11.5.0/firebase-auth-compat.js"></script>
+<script src="../js/firebase-init.js"></script>
+
+<script src="/projet/js/loading.js"></script>
+<script src="/projet/login/login.js"></script>
+<script src="/projet/js/validations.js"></script>
+<script src="/projet/js/go.js"></script>
 
 </html>
