--- a/projet/agendamento/agendamento.html
+++ b/projet/agendamento/agendamento.html
@@ -1,18 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/global/glob.css">
+    <link rel="stylesheet" href="/projet/global/glob.css">
     <link rel="stylesheet" href="agendamento.css">
     <title>agendamento</title>
 </head>
+
 <body>
-    <header >
+    <header>
         <div class="topo">
-            <div id="imglogo" >
-                <a href="/html/index.html">
-                    <img class="ing" src="/img/logo-site.jpeg" alt="logo"></a>
+            <div id="imglogo">
+                <a href="/projet/html/index.html">
+                    <img class="ing" src="/projet/img/logo-site.jpeg" alt="logo"></a>
             </div>
             <div class="infor">
                 <div class="semback">
@@ -29,7 +31,7 @@
     </header>
 
     <main class="body">
-       <p>helou word</p>
+        <p>helou word</p>
     </main>
 
 
@@ -37,10 +39,10 @@
         <div class="container">
             <p>&copy; [Ano Atual] [Nome da Barbearia]. Todos os direitos reservados.</p>
             <div class="social-links">
-                <a href="#"><img src="/img/logotipo-circular-do-facebook.png" alt="Facebook"></a>
-                <a href="#"><img src="/img/instagram.png" alt="Instagram"></a>
-                <a href="#"><img src="/img/youtube.png" alt="Facebook"></a>
-                <a href="#"><img src="/img/whatsapp.png" alt="Instagram"></a>
+                <a href="#"><img src="/projet/img/logotipo-circular-do-facebook.png" alt="Facebook"></a>
+                <a href="#"><img src="/projet/img/instagram.png" alt="Instagram"></a>
+                <a href="#"><img src="/projet/img/youtube.png" alt="Facebook"></a>
+                <a href="#"><img src="/projet/img/whatsapp.png" alt="Instagram"></a>
             </div>
         </div>
     </footer>
@@ -49,12 +51,12 @@
 <script src="https://www.gstatic.com/firebasejs/11.5.0/firebase-app-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/11.5.0/firebase-auth-compat.js"></script>
 
-<script src="../js/firebase-init.js"></script>
+<script src="/projet/js/firebase-init.js"></script>
 
-<script src="../js/auth-guard.js"></script>
+<script src="/projet/js/auth-guard.js"></script>
 <script src="agendamento.js"></script>
-<script src="../js/validations.js"></script>
-<script src="../js/go.js"></script>
-<script src="" ></script>
+<script src="/projet/js/validations.js"></script>
+<script src="/projet/js/go.js"></script>
+<script src=""></script>
 
 </html>
