--- a/home/newHome.html
+++ b/home/newHome.html
@@ -121,6 +121,8 @@
 
 <script src="https://www.gstatic.com/firebasejs/11.5.0/firebase-app-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/11.5.0/firebase-auth-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/11.5.0/firebase-firestore-compat.js"></script>
+
 
 <script src="/js/firebase-init.js"></script>
 
