--- a/login/login.html
+++ b/login/login.html
@@ -55,7 +55,7 @@
                         </div>
                         <div class="buttonesqueci">
                             <button type="button" id="recover-password-button" disabled="true" onclick="recoverPassword()">
-                                Esqueci minha cenha
+                                Esqueci minha senha
                             </button>
                         </div>
                         <div class="buttoncadastrar">
@@ -75,8 +75,6 @@
                 <a href="#"><img src="/img/logotipo-circular-do-facebook.png" alt="Facebook"></a>
                 <a href="#"><img src="/img/instagram.png" alt="Instagram"></a>
                 <a href="#"><img src="/img/youtube.png" alt="Instagram"></a>
-                <a href="#"><img src="/img/whatsapp.png" alt="Instagram"></a>
-                <a href="#"><img src="/img/youtube.png" alt="Facebook"></a>
                 <a href="#"><img src="/img/whatsapp.png" alt="Instagram"></a>
             </div>
         </div>
