--- a/newindex/newindex.html
+++ b/newindex/newindex.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sua Barbearia de Confiança</title>
     <link rel="stylesheet" href="newindex.css">
+    <link rel="stylesheet" href="/global/glob.css">
 </head>
 
 <body>
@@ -50,7 +51,7 @@
                 </div>
             </div>
             <div class="hero-image">
-                <img src="/img/barbearia-hero.jpeg" alt="">
+                <img src="/img/imagemdefundo.jpeg" alt="">
             </div>
         </div>
     </section>
